--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -68,11 +68,7 @@ h6,
 .display-2,
 .display-4,
 .display-5,
-.display-7 {
-  text-align: justify;
-  text-justify: inter-word;
-}
-
+.display-7,
 span,
 p,
 a {
