--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1042,6 +1042,12 @@ a {
     left: -1rem;
   }
 }
+.cid-txGDm8BLQL {
+  background-color: #36a9e1;
+}
+.cid-txGDm8BLQL H3 {
+  text-align: center;
+}
 .cid-txGz2pLMVf {
   padding-top: 2rem;
   padding-bottom: 2rem;
