--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,14 +1,14 @@
 @font-face {
   font-family: 'KaeliaBold';
-  src: url('assents/fonts/KaeliaBold.ttf');
+  src: url('assets/fonts/KaeliaBold.ttf');
 }
 @font-face {
   font-family: 'KaeliaSemibold';
-  src: url('assents/fonts/KaeliaSemibold.ttf');
+  src: url('assets/fonts/KaeliaSemibold.ttf');
 }
 @font-face {
   font-family: 'KaeliaRegular';
-  src: url('assents/fonts/KaeliaRegular.ttf');
+  src: url('assets/fonts/KaeliaRegular.ttf');
 }
 body {
   font-family: Jost;
