--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,3 +1,6 @@
+.cid-txKlOWEnce {
+  background-image: url("../../../assets/images/1.webp");
+}
 @font-face {
   font-family: 'KaeliaBold';
   src: url('assets/fonts/KaeliaBold.ttf');
