--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,6 +1,7 @@
 .cid-txKlOWEnce {
   background-image: url("../../../assets/images/1.webp");
 }
+
 body {
   font-family: Jost;
 }
@@ -685,16 +686,6 @@ body {
 a {
   transition: color 0.6s;
 }
-.cid-txKlOWEnce {
-  background-image: url("../../../assets/images/9577124817-cdc448d209-k-2000x1333.jpg");
-}
-.cid-txKlOWEnce .mbr-text,
-.cid-txKlOWEnce .mbr-section-btn {
-  text-align: right;
-}
-.cid-txKlOWEnce .mbr-section-title {
-  text-align: right;
-}
 .cid-txGyP2nDKD {
   z-index: 1000;
   width: 100%;
@@ -1054,6 +1045,12 @@ a {
     max-width: calc(100% + 2rem);
     left: -1rem;
   }
+}
+.cid-txGDm8BLQL {
+  background-color: #36a9e1;
+}
+.cid-txGDm8BLQL H3 {
+  text-align: center;
 }
 .cid-txGz2pLMVf {
   padding-top: 2rem;
