--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,5 +1,5 @@
 .cid-txKlOWEnce {
-  background-image: url("../../../assets/images/1.webp");
+  background-image: url("../../../assets/images/1.gif");
 }
 .cid-txKlOWEnce .mbr-text,
 .cid-txKlOWEnce .mbr-section-btn {
