--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,6 +1,3 @@
-.cid-txKlOWEnce {
-  background-image: url("../../../assets/images/3.gif");
-}
 .cid-txKlOWEnce .mbr-text,
 .cid-txKlOWEnce .mbr-section-btn {
   text-align: right;
@@ -9,7 +6,7 @@
   text-align: right;
 }
 body {
-  font-family: Jost;
+  font-family: Roboto;
 }
 .display-1 {
   font-family: 'Roboto';
@@ -692,6 +689,16 @@ body {
 a {
   transition: color 0.6s;
 }
+.cid-txKlOWEnce {
+  background-image: url("../../../assets/images/9577124817-cdc448d209-k-2000x1333.jpg");
+}
+.cid-txKlOWEnce .mbr-text,
+.cid-txKlOWEnce .mbr-section-btn {
+  text-align: center;
+}
+.cid-txKlOWEnce .mbr-section-title {
+  text-align: center;
+}
 .cid-txGyP2nDKD {
   z-index: 1000;
   width: 100%;
@@ -1052,12 +1059,6 @@ a {
     left: -1rem;
   }
 }
-.cid-txGDm8BLQL {
-  background-color: #36a9e1;
-}
-.cid-txGDm8BLQL H3 {
-  text-align: center;
-}
 .cid-txGz2pLMVf {
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -1126,4 +1127,111 @@ a {
 }
 .cid-txGz2pLMVf .media-container-row .row-copirayt p {
   width: 100%;
+}
+.cid-txKH98X6GU {
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: #fafafa;
+}
+.cid-txKH98X6GU .carousel {
+  width: 100%;
+}
+.cid-txKH98X6GU .carousel-inner {
+  display: flex;
+  align-content: center;
+  align-items: center;
+}
+.cid-txKH98X6GU .carousel-item img {
+  height: 100vh;
+  object-fit: cover;
+}
+.cid-txKH98X6GU .carousel-caption {
+  bottom: 40px;
+}
+.cid-txKH98X6GU .mobi-mbri-arrow-next {
+  margin-left: 5px;
+}
+.cid-txKH98X6GU .mobi-mbri-arrow-prev {
+  margin-right: 5px;
+}
+.cid-txKH98X6GU .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+.cid-txKH98X6GU .item-wrapper {
+  width: 100%;
+}
+@media (max-width: 767px) {
+  .cid-txKH98X6GU .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-txKH98X6GU .content-slider-wrap {
+    width: 100% !important;
+  }
+}
+.cid-txKH98X6GU .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-txKH98X6GU .carousel-control {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-txKH98X6GU .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-txKH98X6GU .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-txKH98X6GU .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-txKH98X6GU .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-txKH98X6GU .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-txKH98X6GU .carousel-indicators li.active,
+.cid-txKH98X6GU .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-txKH98X6GU .carousel-indicators li::after,
+.cid-txKH98X6GU .carousel-indicators li::before {
+  content: none;
+}
+.cid-txKH98X6GU .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-txKH98X6GU .carousel-indicators {
+    display: none !important;
+  }
 }
