--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3,10 +3,10 @@
 }
 .cid-txKlOWEnce .mbr-text,
 .cid-txKlOWEnce .mbr-section-btn {
-  text-align: right;
+  text-align: center;
 }
 .cid-txKlOWEnce .mbr-section-title {
-  text-align: right;
+  text-align: center;
 }
 body {
   font-family: Roboto;
