--- a/assets/custom/custom.css
+++ b/assets/custom/custom.css
@@ -1,6 +1,2 @@
-video {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  z-index: 1;
-}
+.cid-txKlOWEnce {
+  background-image: url("../../../assets/images/33.gif");
