--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -683,7 +683,7 @@ a {
   transition: color 0.6s;
 }
 .cid-txKlOWEnce {
-  background-image: url("../../../files/images/33.gif");
+  background-image: url("../../../files/images/cranes.webp");
 }
 .cid-txKlOWEnce .mbr-text,
 .cid-txKlOWEnce .mbr-section-btn {
