--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -687,19 +687,16 @@ a {
 }
 .cid-txKlOWEnce .mbr-text,
 .cid-txKlOWEnce .mbr-section-btn {
-  text-align: center;
+  text-align: left;
 }
 .cid-txKlOWEnce .mbr-section-title {
-  text-align: center;
+  text-align: left;
 }
-.cid-txGyP2nDKD {
-  z-index: 1000;
-  width: 100%;
-  position: relative;
-  min-height: 60px;
+.cid-txGyP2nDKD .navbar-dropdown {
+  position: relative !important;
 }
-.cid-txGyP2nDKD nav.navbar {
-  position: fixed;
+.cid-txGyP2nDKD .navbar-dropdown {
+  position: absolute !important;
 }
 .cid-txGyP2nDKD .dropdown-item:before {
   font-family: Moririse2 !important;
@@ -804,8 +801,7 @@ a {
   min-height: 70px;
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: rgba(255, 255, 255, 0);
 }
 .cid-txGyP2nDKD .navbar.opened {
   transition: all 0.3s;
@@ -981,7 +977,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #36a9e1;
+  background-color: #ffffff;
 }
 .cid-txGyP2nDKD button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1023,7 +1019,6 @@ a {
 }
 .cid-txGyP2nDKD .navbar-dropdown {
   padding: 0 1rem;
-  position: fixed;
 }
 .cid-txGyP2nDKD a.nav-link {
   display: flex;
@@ -1055,7 +1050,7 @@ a {
 .cid-txGz2pLMVf {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #232323;
+  background-color: #1a2033;
 }
 .cid-txGz2pLMVf .row-links {
   width: 100%;
@@ -1120,111 +1115,4 @@ a {
 }
 .cid-txGz2pLMVf .media-container-row .row-copirayt p {
   width: 100%;
-}
-.cid-txKH98X6GU {
-  padding-top: 0;
-  padding-bottom: 0;
-  background-color: #fafafa;
-}
-.cid-txKH98X6GU .carousel {
-  width: 100%;
-}
-.cid-txKH98X6GU .carousel-inner {
-  display: flex;
-  align-content: center;
-  align-items: center;
-}
-.cid-txKH98X6GU .carousel-item img {
-  height: 100vh;
-  object-fit: cover;
-}
-.cid-txKH98X6GU .carousel-caption {
-  bottom: 40px;
-}
-.cid-txKH98X6GU .mobi-mbri-arrow-next {
-  margin-left: 5px;
-}
-.cid-txKH98X6GU .mobi-mbri-arrow-prev {
-  margin-right: 5px;
-}
-.cid-txKH98X6GU .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-.cid-txKH98X6GU .item-wrapper {
-  width: 100%;
-}
-@media (max-width: 767px) {
-  .cid-txKH98X6GU .container .carousel-control {
-    margin-bottom: 0;
-  }
-  .cid-txKH98X6GU .content-slider-wrap {
-    width: 100% !important;
-  }
-}
-.cid-txKH98X6GU .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-.cid-txKH98X6GU .carousel-control {
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-txKH98X6GU .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-txKH98X6GU .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-txKH98X6GU .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-txKH98X6GU .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 1.5rem !important;
-}
-.cid-txKH98X6GU .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-txKH98X6GU .carousel-indicators li.active,
-.cid-txKH98X6GU .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-txKH98X6GU .carousel-indicators li::after,
-.cid-txKH98X6GU .carousel-indicators li::before {
-  content: none;
-}
-.cid-txKH98X6GU .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-txKH98X6GU .carousel-indicators {
-    display: none !important;
-  }
 }
