--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -767,7 +767,7 @@ a {
 }
 .cid-txGyP2nDKD .dropdown-menu,
 .cid-txGyP2nDKD .navbar.opened {
-  background: #ffffff !important;
+  background: #1a2033 !important;
 }
 .cid-txGyP2nDKD .nav-item:focus,
 .cid-txGyP2nDKD .nav-link:focus {
