--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -683,7 +683,7 @@ a {
   transition: color 0.6s;
 }
 .cid-txKlOWEnce {
-  background-image: url("../../../files/images/cranes.jpg");
+  background-image: url("../../../assets/images/cranes-2000x1125.jpg");
 }
 .cid-txKlOWEnce .mbr-text,
 .cid-txKlOWEnce .mbr-section-btn {
@@ -691,6 +691,30 @@ a {
 }
 .cid-txKlOWEnce .mbr-section-title {
   text-align: left;
+}
+.cid-txQJZk8CT2 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-txQJZk8CT2 img {
+  width: 120px;
+  margin: auto;
+}
+.cid-txQJZk8CT2 .card {
+  transition: all 0.3s;
+  height: fit-content;
+  padding: 1rem 0;
+  opacity: 0.7;
+  margin-bottom: 1rem;
+}
+@media (min-width: 992px) {
+  .cid-txQJZk8CT2 .card {
+    max-width: 12.5%;
+  }
+}
+.cid-txQJZk8CT2 .mbr-section-title {
+  color: #1a2033;
 }
 .cid-txGyP2nDKD .navbar-dropdown {
   position: relative !important;
@@ -801,7 +825,7 @@ a {
   min-height: 70px;
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
-  background: rgba(255, 255, 255, 0);
+  background: rgba(26, 32, 51, 0);
 }
 .cid-txGyP2nDKD .navbar.opened {
   transition: all 0.3s;
@@ -946,7 +970,7 @@ a {
   padding: 0.667em 1.667em;
 }
 .cid-txGyP2nDKD .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #1a2033;
 }
 .cid-txGyP2nDKD .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -977,7 +1001,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #1a2033;
 }
 .cid-txGyP2nDKD button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
