--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1140,3 +1140,21 @@ a {
 .cid-txGz2pLMVf .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-txXlETiyLQ {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-image: url("../../../files/images/cappotto.jpg");
+}
+.cid-txXlETiyLQ .mbr-text,
+.cid-txXlETiyLQ .mbr-section-btn {
+  color: #232323;
+}
+.cid-txXlETiyLQ .card-title,
+.cid-txXlETiyLQ .card-box {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-txXlETiyLQ .mbr-text,
+.cid-txXlETiyLQ .link-wrap {
+  color: #ffffff;
+}
