--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1143,7 +1143,7 @@ a {
 .cid-txXlETiyLQ {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-image: url("../../../files/images/cappotto.jpg");
+  background-image: url("../../../files/images/cappotto_2.jpg");
 }
 .cid-txXlETiyLQ .mbr-text,
 .cid-txXlETiyLQ .mbr-section-btn {
