--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1158,3 +1158,68 @@ a {
 .cid-txXlETiyLQ .link-wrap {
   color: #ffffff;
 }
+.cid-tyqAnGv2cJ {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background: #ffffff;
+}
+@media (max-width: 767px) {
+  .cid-tyqAnGv2cJ .row {
+    flex-direction: column-reverse;
+  }
+  .cid-tyqAnGv2cJ .row .map-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+.cid-tyqAnGv2cJ .google-map {
+  height: 100%;
+  position: relative;
+}
+.cid-tyqAnGv2cJ .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-tyqAnGv2cJ .google-map [data-state-details] {
+  color: #6b6763;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-tyqAnGv2cJ .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-tyqAnGv2cJ .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
+.cid-tyqAnGv2cJ .image-wrapper {
+  display: flex;
+  align-items: center;
+}
+.cid-tyqAnGv2cJ .card-wrapper {
+  display: flex;
+  border-radius: 4px;
+  background: #fafafa;
+}
+.cid-tyqAnGv2cJ .card-wrapper:not(:nth-last-child(1)) {
+  margin-bottom: 2rem;
+}
+@media (max-width: 991px) {
+  .cid-tyqAnGv2cJ .card-wrapper {
+    padding: 1rem 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-tyqAnGv2cJ .card-wrapper {
+    padding: 2rem 4rem;
+  }
+}
+.cid-tyqAnGv2cJ .mbr-iconfont {
+  font-size: 2rem;
+  padding-right: 1.5rem;
+  color: #36a9e1;
+}
